@@ -2,7 +2,6 @@ package week10.week10d01;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -11,7 +10,7 @@ class HikingTest {
 
     @Test
     public void testGetPlusElevation() {
-        List<Double> heights = Arrays.asList(10.0,15.0,20.0,5.0);
+        List<Double> heights = List.of(10.0,15.0,20.0,5.0);
         assertEquals(10.0, Hiking.getPlusElevation(heights));
     }
 
